# api_insee

./: .coveragerc  .env.sample  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  CONTRIBUTING.md  README en.md  README.md  README.rst  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: code-quality.yml  run-tests.yml
src/api_insee/: __init__.py  api.py  conf.py
src/api_insee/criteria/: __init__.py  base.py  field.py  field_exact.py  list.py  periodic.py  periodic_field.py  range.py  raw.py
src/api_insee/exceptions/: authentication_error.py  request_error.py
src/api_insee/exeptions/: auth_exeption.py  authentication_error.py  params_exeption.py  request_error.py  request_exeption.py
src/api_insee/request/: request.py  request_entreprises.py  request_informations.py  request_token.py
src/api_insee/utils/: api_key.py  auth_service.py  client_credentials.py  client_token.py
tests/: conftest.py  test_authentication.py  test_csv.py  test_cursor.py  test_liens_sucession_service.py  test_siren.py  test_siret.py  test_v3_11.py  utils.py
tests/cassettes/test_authentication/: test_generate_token.yaml  test_unauthorized_credentials.yaml
tests/cassettes/test_csv/: test_request_csv_fail_with_cursor.yaml  test_request_format_csv_in_get_parameters.yaml  test_request_format_fallback_is_csv.yaml  test_request_format_fallback_is_json.yaml
tests/cassettes/test_cursor/: test_request_first_pages.yaml  test_request_iterate_on_pages.yaml
tests/cassettes/test_liens_sucession_service/: test_liens_succession_search_request.yaml
tests/cassettes/test_siren/: test_siren_raw_search.yaml  test_siren_search.yaml  test_siren_search_by_field.yaml
tests/cassettes/test_siret/: test_siret_search.yaml
tests/cassettes/test_v3_11/: test_informations.yaml  test_liens_succession.yaml  test_siren.yaml  test_siret.yaml
tests/request/: test_request.py
